Finish the `psxls2csv` function/script to convert Albert's `ps.xls` file to AMC CSV

--- a/tests/data/psxlst.html
+++ b/tests/data/psxlst.html
@@ -16,7 +16,7 @@
 <td>{{ student['Campus ID'] }}</td>
 <td>{{ student['Name'] }}</td>
 <td>{{ student['Email Address']}}</td>
-<td>=&quot;{{ student['Phone'] }}&quot;</td>
+<td>&quot;{{ student['Telephone'] }}&quot;</td>
 <td>4.00</td>
 <td>{{ student['Program and Plan']|e }}</td>
 <td>Freshman</td>
